--- a/coc-settings.json
+++ b/coc-settings.json
@@ -38,6 +38,7 @@
         "value": "\uf89f",
         "variable": "\ue71b"
     },
+	"python.jediEnabled": false,
     "languageserver": {
         "cmake": {
             "command": "cmake-language-server",
