enable the semantic highlighting of clangd

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
 	"explorer.icon.enableNerdfont":true,
+	"clangd.semanticHighlighting": true,
 	"suggest.autoTrigger":"always",
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
