--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,6 +2,9 @@
     "explorer.icon.enableNerdfont": true,
     "diagnostic.displayByAle": true,
     "clangd.semanticHighlighting": true,
+    "codeLens.enable": true,
+    "git.enableGutters": true,
+    "git.addGBlameToVirtualText": false,
     "suggest.autoTrigger": "always",
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
@@ -75,6 +78,5 @@
                 "lintTool": "golint"
             }
         }
-    },
-    "git.enableGutters": true
+    }
 }
