配置文件结构调整
剥离不依赖插件的通用配置和篇幅较大的coc.nvim配置到单独文件
由于gopls在提供本机语言服务时超时，替换为go-languageserver
增补插件vim-devicons，为airline和Startify提供图标
考虑到keymap在(neo)vim中为键盘布局的设置，keymap.vim更名为keybindings.vim

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -65,10 +65,7 @@
             }
         },
         "golang": {
-            "command": "gopls",
-            "rootPatterns": [
-                "go.mod"
-            ],
+            "command": "go-langserver",
             "filetypes": [
                 "go"
             ],
