插件组大调
移除检查工具ale
引入nvim-treesitter替代vim-polyglot提供更好的语义着色
引入skywind3000的asyncrun.vim和asynctasks.vim获得更好的开发体验

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,10 +1,10 @@
 {
     "explorer.icon.enableNerdfont": true,
-    "diagnostic.displayByAle": true,
+    "diagnostic.displayByAle": false,
     "clangd.semanticHighlighting": true,
     "codeLens.enable": true,
     "git.enableGutters": true,
-    "git.addGBlameToVirtualText": false,
+    "git.addGBlameToVirtualText": true,
     "suggest.autoTrigger": "always",
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
