增加lua支持，修改plug仓库前缀为git@github.com

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -64,6 +64,12 @@
                 "buildDirectory": "build"
             }
         },
+        "lua": {
+            "command": "lua-lsp",
+            "filetypes": [
+                "lua"
+            ]
+        },
         "golang": {
             "command": "go-langserver",
             "filetypes": [
